<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.12">
  <DUT Name="XTSDiag_InfeedSectionInfo" Id="{c1a51462-de7b-089e-23c1-8dadbe548a49}">
    <Declaration><![CDATA[TYPE XTSDiag_InfeedSectionInfo :
STRUCT
	DcLinkVoltage				: ARRAY[1..6] OF REAL;
	ModuleCurrentSummed			: ARRAY[1..6] OF REAL;
	ModuleCurrentIndivual		: ARRAY[1..6] OF REAL;
	MaxOverallCurrentLast500ms	: ARRAY[1..6] OF REAL;
	ModuleNumber				: ARRAY[1..6] OF UDINT;
	ModuleCount					: INT;
	StartDcLinkVoltage			: REAL;
	EndDcLinkVoltage			: REAL;
	VoltageDropAcrossInfeed		: REAL;
	VoltageDropAcrossCable		: REAL;
	TotalCurrent				: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>