<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.12">
  <DUT Name="XTSDiag_ModuleInfo_ByObj" Id="{c098ea86-549f-4300-ab95-61a55f7c494d}">
    <Declaration><![CDATA[TYPE XTSDiag_ModuleInfo_ByObj :
STRUCT
	DCLinkVoltage				: REAL;
	OverallCurrent				: REAL;
	MaxOverallCurrentLast500ms	: REAL;
	PCBTemperatures				: ARRAY[1..4] OF REAL;
	I2TTemperaturesPct			: ARRAY[1..15] OF USINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>